--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!--This Fire text utility is made by Eaishawarya Malviya or sindbad, (aishwarode17@github)
+    . I used react.js html5 css3 and javascript to made this. It took my 6 hours (approx) 
+  to figure out all the functions and styles. I hope you like it. I will continue to 
+make more such great projects and react apps in future.-->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
